--- a/package.json
+++ b/package.json
@@ -1,24 +1,30 @@
 {
-  "name": "mynextapp",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "13.1.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.27",
-    "@types/react-dom": "18.0.10",
-    "eslint": "8.32.0",
-    "eslint-config-next": "13.1.4",
-    "typescript": "4.9.4"
-  }
+    "name": "mynextapp",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "lint:fix": "eslint \"src/**/*.{ts,tsx,js,jsx}\" --fix",
+        "format": "prettier --write --ignore-path .gitignore \"src/**/*.{ts,tsx,js,jsx,json,css,scss}\"",
+        "test-all": "run-s lint format lint:fix"
+    },
+    "dependencies": {
+        "next": "13.1.4",
+        "react": "18.2.0",
+        "react-dom": "18.2.0"
+    },
+    "devDependencies": {
+        "@types/node": "18.11.18",
+        "@types/react": "18.0.27",
+        "@types/react-dom": "18.0.10",
+        "eslint": "8.32.0",
+        "eslint-config-next": "13.1.4",
+        "eslint-config-prettier": "8.6.0",
+        "prettier": "2.8.3",
+        "typescript": "4.9.4",
+        "yarn-run-all": "^3.1.1"
+    }
 }
